<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="8dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:text="@string/dialog_updater_current_version" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:text="@string/dialog_updater_latest_version" />

        <TextView
            android:id="@+id/layout_updater_latest_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_updater_unknown_version" />
    </LinearLayout>

    <Button
        android:id="@+id/layout_updater_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_updater_check" />

    <Button
        android:id="@+id/layout_updater_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_updater_update"
        android:visibility="gone" />

</LinearLayout>