<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_networks"
        android:icon="@android:drawable/ic_menu_agenda"
        android:showAsAction="never"
        android:title="@string/menu_networks"/>
    <item
        android:id="@+id/menu_updater"
        android:icon="@android:drawable/ic_menu_rotate"
        android:showAsAction="never"
        android:title="@string/menu_updater"/>
    <item
        android:id="@+id/menu_quit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:showAsAction="never"
        android:title="@string/menu_quit"/>

</menu>