<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/dialog_about_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="4dip"
        android:layout_marginTop="4dip" >

        <ImageView
            android:id="@+id/dialog_about_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/dialog_about_logo_content_description"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_about_logo"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/app_name"
                android:textSize="20dip" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:paddingLeft="5dip"
                android:text="@string/app_version"
                android:textSize="20dip" />
        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/dialog_about_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/dialog_about_bottom"
        android:layout_below="@+id/dialog_about_top"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip" >

        <TextView
            android:id="@+id/dialog_about_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:longClickable="false"
            android:text="@string/dialog_about_text"
            android:textSize="18dip" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/dialog_about_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/dialog_about_bottom_buttonscontainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/dialog_about_license_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_default_holo_light"
                android:text="@string/dialog_about_gpl" />

            <Button
                android:id="@+id/dialog_about_changelog_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_default_holo_light"
                android:text="@string/dialog_about_changelog" />
        </LinearLayout>

        <Button
            android:id="@+id/dialog_about_open_source_licenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_default_holo_light"
            android:text="@string/dialog_about_open_source_licenses" />
    </LinearLayout>

</RelativeLayout>