<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/showpass_network_name"
            android:textColor="#FF0000"
            android:textSize="36dp" >
        </TextView>

        <TextView
            android:id="@+id/showpass_ESSID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="XXXXXX"
            android:textSize="28dp"
            android:color="#0000FF" >
        </TextView>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/showpass_network_mac"
            android:textColor="#FF0000"
            android:textSize="36dp" >
        </TextView>

        <TextView
            android:id="@+id/showpass_BSSID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dip"
            android:gravity="center"
            android:text="XXXXXX"
            android:textSize="28dp"
            android:color="#0000FF" >
        </TextView>

        <Button
            android:id="@+id/button_showpass"
            android:layout_width="fill_parent"
            android:layout_height="60dip"
            android:layout_marginTop="10dip"
            android:text="@string/showpass_button_showpass"
            android:textSize="24dp"
            android:textStyle="bold" >
        </Button>

        <Button
            android:id="@+id/button_clipboard"
            android:layout_width="fill_parent"
            android:layout_height="60dip"
            android:layout_marginTop="7dip"
            android:text="@string/showpass_button_clipboard"
            android:textSize="21dp"
            android:textStyle="bold" >
        </Button>

        <Button
            android:id="@+id/button_back"
            android:layout_width="fill_parent"
            android:layout_height="60dip"
            android:layout_marginTop="7dip"
            android:text="@string/showpass_button_back"
            android:textSize="24dp"
            android:textStyle="bold" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" />

</RelativeLayout>